[metadata]
license_file = LICENSE.txt
name = subparse
version = 0.5.3
author = Michael Merickel
author_email = oss@m.merickel.org
license = MIT
description = A command line helper library for extensible subcommands
keywords =
    argparse
    cli
    commandline
    subcommand
url = https://github.com/mmerickel/subparse
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
     = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true

[tool:pytest]
python_files = test_*.py
testpaths =
    src/subparse
    tests
